feat(common): рефакторинг проекта
